// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <span
      class="productDescription undefined"
    >
      Coffee mug - sin imagen
    </span>
  </div>
</div>
`;

exports[`ProductTitle Debe de mostrar el componente con el titulo personalizado 1`] = `
<div>
  <span
    class="productDescription custom-class"
  >
    Custom Product
  </span>
</div>
`;
